<resources>
    <string-array name="theme_array">
        <item>Blue Dark Theme</item>
        <item>Blue Light Theme</item>
        <item>Green Dark Theme</item>
        <item>Green Light Theme</item>
    </string-array>

    <string-array name="currency_array">
        <item>Euro</item>
        <item>Dollar</item>
    </string-array>


    <string name="app_name">ShoppingHistory</string>
    <string name="historyoverview_menu_text">History Overview</string>
    <string name="history_trash_menu_title_text">Trash</string>
    <string name="trash_title_text">Trash</string>
    <string name="list_overview_title_text">History Overview</string>
    <string name="empty_trash_button_text">Empty Trash</string>
    <string name="delete_item_content_description_image_button_text">Delete item</string>
    <string name="enter_a_new_list_name_edit_text_hint">enter a new list name</string>
    <string name="save_button_text">save</string>
    <string name="cancel_button_text">cancel</string>
    <string name="create_a_new_list_dialog_title">Create a new List</string>
    <string name="enter_a_the_market_name_edit_text_hint">enter a the market name</string>
    <string name="enter_the_price_edit_text_hint">enter the price</string>
    <string name="enter_your_product_edit_text_hint">enter your product</string>
    <string name="insert_the_date_you_bought_the_product_textview_description">insert the date you bought the product</string>
    <string name="title_activity_overview">OverviewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="restore_item_content_description_image_button_text">restore item</string>
    <string name="toast_moved_to_trash">moved to Trash</string>
    <string name="toast_item_deleted_forever">Item deleted forever</string>
    <string name="toast_empty_trash_forever">All Lists deleted forever</string>
    <string name="input_dialog_new_list_item">Input new List Item</string>
    <string name="insert_the_new_list_title_hint">Insert the new List Title</string>
    <string name="create_a_new_history_item_dialog_title">Create a new History Item</string>
    <string name="no_button_text">No</string>
    <string name="yes_button_text">yes</string>
    <string name="tv_delete_forever_title_are_you_sure">Are you sure you want to delete this item forever?</string>
    <string name="overview_fragment_label">Overview Fragment</string>
    <string name="trash_fragment_label">Trash Fragment</string>
    <string name="tv_empty_trash_title_are_you_sure">Are you sure you want to delete every List in Trash forever?</string>
    <string name="toast_list_with_that_name_already_exists">A List with that name already exists</string>
    <string name="euro_sign">€</string>
    <string name="empty_input_fields_left">There are empty input fields left!</string>
    <string name="move_to_previous_month_content_description">move to previous month</string>
    <string name="move_to_next_month_content_description">move to next month</string>
    <string name="menu_settings_title">Settings</string>
    <string name="select_a_theme_title">Select a Theme</string>
    <string name="settings_title">Settings</string>
    <string name="settings_require_restart">To apply changes you have to restart the app.</string>
    <string name="menu_share_title">share</string>
    <string name="share_msg">ShoppingWallet recognized that I spent {0} {1} in {2}.</string>
    <string name="change_currency_title">Change Currency</string>
    <string name="example_currency_mapping">1 €</string>
    <string name="is_equal">=</string>
    <string name="button_apply">apply</string>
</resources>