<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="@dimen/vertical_margin"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tv_enter_new_history_item_title"
                android:layout_width="wrap_content"
                android:text="@string/create_a_new_history_item_dialog_title"
                android:layout_margin="@dimen/vertical_margin"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content">
            </TextView>

            <EditText
                android:id="@+id/et_new_history_item_product_name"
                android:layout_width="match_parent"
                android:maxLines="3"
                android:layout_below="@+id/tv_enter_new_history_item_title"
                android:layout_margin="@dimen/vertical_margin"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/enter_your_product_edit_text_hint"
                android:layout_height="wrap_content"
                android:focusable="true">
            </EditText>

            <EditText
                android:id="@+id/et_new_history_item_market_name"
                android:layout_width="match_parent"
                android:maxLines="3"
                android:layout_below="@+id/et_new_history_item_product_name"
                android:layout_margin="@dimen/vertical_margin"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/enter_a_the_market_name_edit_text_hint"
                android:layout_height="wrap_content"
                android:focusable="true">
            </EditText>

            <EditText
                android:id="@+id/et_new_history_item_price"
                android:layout_width="match_parent"
                android:layout_below="@+id/et_new_history_item_market_name"
                android:layout_margin="@dimen/vertical_margin"
                android:maxLines="1"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:inputType="numberDecimal"
                android:hint="@string/enter_the_price_edit_text_hint"
                android:layout_height="wrap_content"
                android:focusable="true">
            </EditText>

            <TextView
                android:id="@+id/tv_date_descriptor"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/vertical_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="@string/insert_the_date_you_bought_the_product_textview_description"
                android:layout_below="@+id/et_new_history_item_price"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content">
            </TextView>

            <DatePicker
                android:id="@+id/dp_insert_date_new_history_item"
                android:layout_width="match_parent"
                android:layout_below="@+id/tv_date_descriptor"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_height="wrap_content">
            </DatePicker>

            <Button
                android:id="@+id/button_store_new_history_item_dialog"
                android:layout_below="@+id/dp_insert_date_new_history_item"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/vertical_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="@string/save_button_text"
                android:layout_height="wrap_content">
            </Button>

            <Button
                android:id="@+id/button_cancel_new_history_item_dialog"
                android:layout_width="match_parent"
                android:layout_below="@+id/button_store_new_history_item_dialog"
                android:layout_marginHorizontal="@dimen/vertical_margin"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:text="@string/cancel_button_text"
                android:layout_height="wrap_content">
            </Button>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>