<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="@dimen/vertical_margin"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_enter_new_list_item_title"
                android:layout_width="wrap_content"
                android:text="@string/create_a_new_list_dialog_title"
                android:layout_margin="@dimen/vertical_margin"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content">
            </TextView>

            <EditText
                android:id="@+id/et_new_list_title"
                android:layout_width="match_parent"
                android:layout_below="@+id/tv_enter_new_list_item_title"
                android:layout_margin="@dimen/vertical_margin"
                android:maxLines="5"
                android:hint="@string/insert_the_new_list_title_hint"
                android:layout_height="wrap_content">
            </EditText>

            <Button
                android:id="@+id/button_store_new_list_item_dialog"
                android:layout_below="@+id/et_new_list_title"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/vertical_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="@string/save_button_text"
                android:layout_height="wrap_content">
            </Button>

            <Button
                android:id="@+id/button_cancel_new_list_item_dialog"
                android:layout_width="match_parent"
                android:layout_below="@+id/button_store_new_list_item_dialog"
                android:layout_marginHorizontal="@dimen/vertical_margin"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:text="@string/cancel_button_text"
                android:layout_height="wrap_content">
            </Button>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>