<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="@dimen/vertical_margin"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_delete_forever_dialog_title"
                android:layout_width="wrap_content"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:text="@string/tv_delete_forever_title_are_you_sure"
                android:layout_margin="@dimen/vertical_margin"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content">
            </TextView>

            <Button
                android:id="@+id/button_yes_delete_forever_dialog"
                android:layout_below="@+id/tv_delete_forever_dialog_title"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/vertical_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="@string/yes_button_text"
                android:layout_height="wrap_content">
            </Button>

            <Button
                android:id="@+id/button_no_delete_forever_dialog"
                android:layout_width="match_parent"
                android:layout_below="@+id/button_yes_delete_forever_dialog"
                android:layout_marginHorizontal="@dimen/vertical_margin"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:text="@string/no_button_text"
                android:layout_height="wrap_content">
            </Button>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>