<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="@dimen/vertical_margin"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_title_currency_settings"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/vertical_margin"
                android:text="@string/change_currency_title"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content">
            </TextView>

            <Spinner
                android:id="@+id/spinner_currency_settings"
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/vertical_margin"
                android:layout_below="@+id/tv_title_currency_settings"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content">
            </Spinner>

            <LinearLayout
                android:id="@+id/ll_currency_mapping"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_margin="@dimen/vertical_margin"
                android:layout_below="@+id/spinner_currency_settings"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_current_currency"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/example_currency_mapping"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content">
                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/is_equal"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content">
                </TextView>

                <EditText
                    android:id="@+id/et_map_new_currency"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                </EditText>
            </LinearLayout>

            <Button
                android:id="@+id/button_currency_settings_apply"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/vertical_margin"
                android:text="@string/button_apply"
                android:layout_below="@+id/ll_currency_mapping"
                android:layout_height="wrap_content">
            </Button>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>